shawk/awk/awkson/tests/test-accept/parser-accept/parser_accept_fatal_err.txt
awkson.awk: error: file './test-inputs/parser-tests/parser_test_err.json', line 2, pos 3
awkson.awk: error: expected 'string', got 'unknown characters' instead
  @x"firstName": "John",
  ^
awkson.awk: quitting because of -vFatalError=1
